tests/ui/where-clauses/where-clause-method-substituion.stderr
error[E0277]: the trait bound `X: Foo<X>` is not satisfied
  --> $DIR/where-clause-method-substituion.rs:20:16
   |
LL |     1.method::<X>();
   |                ^ unsatisfied trait bound
   |
help: the trait `Foo<X>` is not implemented for `X`
  --> $DIR/where-clause-method-substituion.rs:10:1
   |
LL | struct X;
   | ^^^^^^^^
help: this trait has no implementations, consider adding one
  --> $DIR/where-clause-method-substituion.rs:1:1
   |
LL | trait Foo<T> {
   | ^^^^^^^^^^^^
note: required by a bound in `Bar::method`
  --> $DIR/where-clause-method-substituion.rs:6:34
   |
LL |     fn method<B>(&self) where A: Foo<B>;
   |                                  ^^^^^^ required by this bound in `Bar::method`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
